# Game-Pencil-Engine-Editor

./: .gitignore  CMakeLists.txt  Game_Pencil_Engine_IDE.cbp  Game_Pencil_Engine_IDE.cscope_file_list  Game_Pencil_Engine_IDE.depend  Game_Pencil_Engine_IDE.layout  LICENSE  Makefile  README.md  README.txt  animation_resource.cpp  changelog.txt  changelog_v1_1_0.txt  changelog_v1_1_1.txt  changelog_v1_1_2.txt  changelog_v1_1_3_release.txt  editor_description.txt  game_errors.txt  game_object_resource.cpp  game_object_resource.h  gpe_editor_helppage.h  gpe_extra_tools.cpp  gpe_gamecontroller_tester.cpp  gpe_gamecontroller_tester.h  gpe_ide_local_settings.txt  gpe_ide_settings.txt  gpe_log_manager.cpp  gpe_project_resources.cpp  gpe_resource_tree.h  gpe_scene_background_class.h  gpe_scene_group_class.cpp  gpe_scene_group_class.h  gpe_scene_particle_class.cpp  gpe_scene_tilemap_class.cpp  license.md  license.txt  light_resource.h  main.cpp  meson.build  particle_resource.cpp  (+4 more)
.github/: FUNDING.yml
.github/workflows/: cmake-ubuntu.yml
build_files/: gpe_electron_addon.txt
build_files/res/: gpe_intro.aac
changelogs/: changelog_template.txt  changelog_v1_0_2.txt  changelog_v1_0_3.txt  changelog_v1_1_3.txt  changelog_v1_1_4.txt  changelog_v1_2_0.txt  changelog_v1_2_2.txt
examples/: flappy_crow.gppf  flappy_wings.gppf  hello_world_example.gppf  platformer_example.gppf  readme.txt  rpg.gppf  shooter_example.gppf  sneaky_bricky.gppf  super_crazy_battle_pong.gppf  zombies.gppf
src/: GPE_CIncludes.h  GPE_Color.cpp  GPE_Color.h  GPE_Color_Manager.cpp  GPE_Color_Manager.h  GPE_Engine.cpp  GPE_Engine.h  GPE_Globals.cpp  GPE_Globals.h  GPE_Renderer.cpp  GPE_Renderer.h  GPE_Texture.cpp  GPE_Texture.h  Makefile  RCa12332  RDa12332  animation_resource.cpp  animation_resource.h  animationresource.cpp  animationresource.h  audio_resource.cpp  audio_resource.h  class_resource.cpp  class_resource.h  classresource.cpp  classresource.h  collision_checks.cpp  collision_checks.h  color_master.cpp  color_master.h  constants.h  dictionaryresource.cpp  dictionaryresource.h  fontResource.cpp  fontResource.h  font_resource.cpp  font_resource.h  functionResource.cpp  functionResource.h  function_resource.cpp  (+121 more)
src/AOSGUI/: ambitious_gui_library.cpp  ambitious_gui_library.h  gpe_syntax_handler.cpp  gpe_syntax_handler.h  meson.build  paw_gui.cpp  paw_gui.h  paw_gui_base.cpp  paw_gui_base.h  paw_gui_buttons.cpp  paw_gui_buttons.h  paw_gui_checkbox.cpp  paw_gui_checkbox.h  paw_gui_color_picker.cpp  paw_gui_color_picker.h  paw_gui_content_selector.cpp  paw_gui_content_selector.h  paw_gui_context.cpp  paw_gui_context.h  paw_gui_dropdown.cpp  paw_gui_dropdown.h  paw_gui_file_popups.cpp  paw_gui_file_popups.h  paw_gui_general_resource.cpp  paw_gui_general_resource.h  paw_gui_general_resource_container.cpp  paw_gui_general_resource_container.h  paw_gui_labels.cpp  paw_gui_labels.h  paw_gui_overlay.cpp  paw_gui_overlay.h  paw_gui_panel_list.cpp  paw_gui_panel_list.h  paw_gui_parsers.cpp  paw_gui_parsers.h  paw_gui_popups.cpp  paw_gui_popups.h  paw_gui_radiobuttons.cpp  paw_gui_radiobuttons.h  paw_gui_resource_dropdown.cpp  (+21 more)
src/GPE/: GPE.cpp  GPE.h  GPE_Animation.cpp  GPE_Animation.h  GPE_Artist_Base.cpp  GPE_Artist_Base.h  GPE_Artist_SDL.cpp  GPE_Artist_SDL.h  GPE_Audio.cpp  GPE_Audio.h  GPE_Backgrounds.cpp  GPE_Backgrounds.h  GPE_Basic_Object.cpp  GPE_Basic_Object.h  GPE_Basic_Object_List.cpp  GPE_Basic_Object_List.h  GPE_Basic_Object_Type_Mapper.cpp  GPE_Basic_Object_Type_Mapper.h  GPE_Branch.cpp  GPE_Branch.h  GPE_CIncludes.h  GPE_Camera.cpp  GPE_Camera.h  GPE_Collisions.cpp  GPE_Collisions.h  GPE_Color.cpp  GPE_Color.h  GPE_Color_Manager.cpp  GPE_Color_Manager.h  GPE_Constants.h  GPE_Engine.cpp  GPE_Engine.h  GPE_Engine.h.save-failed  GPE_File_System.cpp  GPE_File_System.h  GPE_Fonts.cpp  GPE_Fonts.h  GPE_Functions.cpp  GPE_Functions.h  GPE_GameLoadState.h  (+72 more)
src/GPE_Engine/: GPE.cpp  GPE.h  GPE_Animation.cpp  GPE_Animation.h  GPE_Audio.cpp  GPE_Audio.h  GPE_Backgrounds.cpp  GPE_Backgrounds.h  GPE_Basic_Object.cpp  GPE_Basic_Object.h  GPE_CIncludes.h  GPE_Camera.cpp  GPE_Camera.h  GPE_Collisions.cpp  GPE_Collisions.h  GPE_Color.cpp  GPE_Color.h  GPE_Color_Manager.cpp  GPE_Color_Manager.h  GPE_Color_Master.cpp  GPE_Color_Master.h  GPE_Constants.h  GPE_Dirent.h  GPE_Engine.cpp  GPE_Engine.h  GPE_File_System.cpp  GPE_File_System.h  GPE_Fonts.cpp  GPE_Fonts.h  GPE_Functions.cpp  GPE_Functions.h  GPE_Globals.cpp  GPE_Globals.h  GPE_Input.cpp  GPE_Input.h  GPE_Input.h.save-failed  GPE_Layers.cpp  GPE_Layers.h  GPE_Lights.cpp  GPE_Lights.h  (+35 more)
src/editor/: audio_resource.h  class_resource.h  font_resource.cpp  gpe_basic_resource_page.h  gpe_cpp_builder_settings.cpp  gpe_cpp_builder_settings.h  gpe_editor_aboutpage.h  gpe_editor_helppage.cpp  gpe_editor_settings.h  gpe_editor_start_page.cpp  gpe_editor_start_page.h  gpe_extra_tools.h  gpe_game_master_itenary.cpp  gpe_js_compiler_settings.cpp  gpe_log_manager.h  gpe_scene_animation_class.h  gpe_scene_basic_class.h  gpe_scene_helper_class.cpp  gpe_scene_particle_class.h  particle_resource.h  project_properties.h  resource.rc
src/gpe/: gpe.cpp  gpe.h  gpe_animation2d.cpp  gpe_animation2d.h  gpe_animation2d_branch.cpp  gpe_animation2d_branch.h  gpe_artist_base.cpp  gpe_artist_base.cpp.save  gpe_artist_base.h  gpe_audio.cpp  gpe_audio.h  gpe_audio_base.cpp  gpe_audio_base.h  gpe_background.cpp  gpe_background.h  gpe_basic_object.cpp  gpe_basic_object.h  gpe_basic_object_list.cpp  gpe_basic_object_list.h  gpe_basic_object_type_mapper.cpp  gpe_basic_object_type_mapper.h  gpe_branch.cpp  gpe_branch.h  gpe_branch_factory.cpp  gpe_branch_factory.h  gpe_camera.cpp  gpe_camera.h  gpe_collision_controller_base.cpp  gpe_collision_controller_base.h  gpe_collisions.cpp  gpe_collisions.h  gpe_color.cpp  gpe_color.h  gpe_color_manager.cpp  gpe_color_manager.h  (+81 more)
temp_files/: temp_duplicated_resource.cps  temp_duplicated_resource.gpf
themes/: blue_theme.gpf  dark_theme.gpf  default.gpf  defaultAlt.gpf  green_theme.gpf  light_theme.gpf  light_theme.txt  red_theme.gpf  test.gpf
(+608 files in other folders)
