sources += files('ambitious_gui_library.cpp','gpe_syntax_handler.cpp','paw_gui_base.cpp','paw_gui_buttons.cpp','paw_gui_checkbox.cpp','paw_gui_color_picker.cpp','paw_gui_context.cpp','paw_gui.cpp','paw_gui_dropdown.cpp','paw_gui_file_popups.cpp','paw_gui_labels.cpp','paw_gui_overlay.cpp','paw_gui_panel_list.cpp','paw_gui_parsers.cpp','paw_gui_popups.cpp','paw_gui_radiobuttons.cpp','paw_gui_resource_dropdown.cpp','paw_gui_scrollbars.cpp','paw_gui_search_controller.cpp','paw_gui_selectbox.cpp','paw_gui_sliders.cpp','paw_gui_stree.cpp','paw_gui_tab_basic.cpp','paw_gui_tab_manager.cpp','paw_gui_text_input.cpp','paw_gui_themes.cpp','text_editor.cpp')
