sources += files('GPE_Animation.cpp','GPE_Audio.cpp','GPE_Backgrounds.cpp','GPE_Basic_Object.cpp','GPE_Camera.cpp','GPE_Collisions.cpp','GPE_Color.cpp','GPE_Color_Manager.cpp','GPE_Color_Master.cpp','GPE.cpp','GPE_Engine.cpp','GPE_File_System.cpp','GPE_Fonts.cpp','GPE_Functions.cpp','GPE_Globals.cpp','GPE_Input.cpp','GPE_Layers.cpp','GPE_Lights.cpp','GPE_Particles.cpp','GPE_Paths.cpp','GPE_Program_State.cpp','GPE_Renderer.cpp','GPE_Resources_Controller.cpp','GPE_Scene.cpp','GPE_Shapes.cpp','GPE_Shared_Resources.cpp','GPE_Spatial_Partitions.cpp','GPE_State_Manager.cpp','GPE_String_Ex.cpp','GPE_Surface_Modifier.cpp','GPE_Texture.cpp','GPE_Tiles.cpp','GPE_Timer.cpp','GPE_Translator.cpp')
